--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -22,7 +22,7 @@
         <!-- Override body -->
         <ui:define name="body">
             <h:panelGroup layout="block" class="bg-img">
-                <div class="wrapper">
+                <div>
                     <!-- Navigation Bar -->
                     <ui:insert name="nav" >
                         <div class="login-nav">
