shift tiles to right

--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -16,7 +16,13 @@
         </ui:define>
 
         <!-- Override Content -->
-        <ui:define name="content">
+        <ui:define name="left">
+            <div class="user-info">
+                
+            </div>
+        </ui:define>
+        
+        <ui:define name="right">
             <div class="tile-area">
                 <div class="row">
                     <!--CRMS-->
