create user info box

--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -18,6 +18,14 @@
         <!-- Override Content -->
         <ui:define name="left">
             <div class="user-info">
+                <div class="avatar"></div>
+                <div class="user-name">Angela</div>
+                <div class="user-company"></div>
+            <hr />
+            <ul class="role-list">
+                <li></li>
+                <li></li>
+            </ul>
                 
             </div>
         </ui:define>
