--- a/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
@@ -55,7 +55,10 @@
         </ui:define>
 
         <ui:define name="right">
-            <div class="system-banner mrp-system-banner"></div>
+            <p:breadCrumb>
+                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+            </p:breadCrumb>
+            <div class="system-banner crms-system-banner"></div>
             <h2 class="system-welcome">Welcome to CRMS system!</h2>
 
             <div class="system-description">CRMS empowers your organization to:
