--- a/MerlionPortal/MerlionPortal-war/web/crms/viewallinvoices.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewallinvoices.xhtml
@@ -56,7 +56,11 @@
         </ui:define>
 
         <ui:define name="right">
-           <h:form id="form">
+            <p:breadCrumb>
+                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                <p:menuitem value="View All Invoices" url="viewallinvoices.xhtml" />
+            </p:breadCrumb>
+            <h:form id="form">
                 <p:ajaxStatus style="width:16px;height:16px;">
                     <f:facet name="start">
                         <h:graphicImage value="/img/load.gif" />
@@ -141,7 +145,7 @@
                     <p:commandButton value="View Invoice" action="#{viewAllInvoicesManagedBean.viewAReceivedInvoice()}" />
                 </p:panel>
             </h:form>
-                
+
         </ui:define>
     </ui:composition>
 </html>
