--- a/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
@@ -55,6 +55,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                    <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                    <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
+                </p:breadCrumb>
              <p:panel id="basic" header="Create Service Contract" style="margin-bottom:20px">
                 <h:form id="form">
                     <p:ajaxStatus style="width:16px;height:16px;">
