--- a/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
@@ -56,6 +56,10 @@
 
         <ui:define name="right">
             <h:form id="form">
+                <p:breadCrumb>
+                    <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                    <p:menuitem value="Create New Service" url="createservice.xhtml" />
+                </p:breadCrumb>
                 <p:panel  header="Create New Service"  style="margin-bottom:20px">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
