--- a/MerlionPortal/MerlionPortal-war/web/crms/generateserviceinvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/generateserviceinvoice.xhtml
@@ -55,6 +55,11 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
+                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+            </p:breadCrumb>
             <h:form id="form">
                 <p:fieldset legend="Invoice Information" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="6">
@@ -104,7 +109,7 @@
 
                         <p:outputLabel value="Invoice Condition:" style="color: red" /><p:spacer width="20" height="20" />
                         <p:inputTextarea value="#{generateServiceInvoiceManagedBean.conditionText}" styleClass="form-control" required="true" requiredMessage="Condition is required." rows="5" cols="30" counter="display" maxlength="999" counterTemplate="{0} characters remaining." autoResize="true"/>
-                        
+
                         <p:spacer width="20" height="20" /><p:spacer width="20" height="20" />
                         <h:outputText id="display" />
                     </h:panelGrid>
