--- a/MerlionPortal/MerlionPortal-war/web/crms/serviceyellowpages.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/serviceyellowpages.xhtml
@@ -56,6 +56,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                <p:menuitem value="Service Yellow Pages" url="serviceyellowpages.xhtml"/>
+            </p:breadCrumb>
             <h:form id="form">
                 <p:panel  header="Service Yellow Pages"  style="margin-bottom:20px">
                     <p:ajaxStatus style="width:16px;height:16px;">
