--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
@@ -56,6 +56,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
+                <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
+            </p:breadCrumb>
             <h:form id="form">
                 <p:dataTable id="service" var="service" sortMode="multiple" value="#{viewServiceCatalogManagedBean.services}" 
                              widgetVar="warehousesTable"
@@ -77,7 +81,7 @@
                         <h:outputText value="#{service.serviceName}" />
                     </p:column>
 
-                 
+
 
                     <p:column  filterBy="#{service.publicView}" filterMatchMode="contains" headerText="Publish">
                         <h:outputText value="#{service.publicView}" />
